Added reports Added cancels of creation, reports RestClient.java renamed to AssociationRepository.java and now used via AssociationService.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 bot.username=shortysu_bot
-bot.token=token
+bot.token=6170313467:AAFxwR97__gaVxHTyfZ1vbWaaT9o8eswfWY
 
 shorty.api.url=https://shorty.su/api/v1
-shorty.domain=https://shorty.su
+shorty.auth=Q60Wa}`04^M)U5p0I'@ew"v?%B7Mz_
 
-spring.mail.allow-circular-references=true
-server.port=8081
+#without protocol and / at the end
+shorty.domain=shorty.su
+
+
+server.port=2077
